--- a/main.tex
+++ b/main.tex
@@ -608,8 +608,6 @@ The reconstructed energy distribution for selected \zpsel events that pass the B
 
 The selection efficiency for the \zpsel cut-based and BDT selections are shown in Fig.~\ref{fig:1e0p:eff:RUN3}.  The BDT selection is both more efficient and more pure. 
 
-\clearpage
-
 \subsection{$\nu_e$ CC Inclusive selection \textcolor{green}{Wouter}}
 \input{NueCCsel/NueCCsel}
 \clearpage
@@ -622,9 +620,9 @@ The selection efficiency for the \zpsel cut-based and BDT selections are shown i
 \section{Systematics \textcolor{red}{Maya, Nicolo, Sebastien}}
 \label{sec:systematics}
 
-Our selections are subject to some level of uncertainty, both statistical and systematic. The systematic uncertainties are associated to the level of precision of the model used in the simulation of neutrino interactions (GENIE), knowledge of the neutrino beam (flux), and mis-modeling of the detector response (detector systematics). These systematic uncertainties can be calculated for many parameters of the models and measured variables that we use to reconstruct our sample
+Our selections are subject to some level of uncertainty, both statistical and systematic. The systematic uncertainties are associated to the level of precision of the model used in the \textcolor{blue}{simulation of neutrino interactions \st{reconstruction}} (GENIE), knowledge of the neutrino beam (flux), and mis-modeling of the detector response (detector systematics). These systematic uncertainties can be calculated for many parameters of the models and measured variables that we use to reconstruct our sample
 
-When treating systematic uncertainties, one wishes to take into account correlations between different bins of the distribution of a given reconstructed variable. For each uncertainty, a covariance matrix correlating the variation in the measured number of events between two bins is calculated. Two approaches are followed to obtain the covariance matrix, depending on the type of uncertainty: unisim or multisim.
+\textcolor{blue}{When treating systematic uncertainties, one wishes to take into account correlations between different bins of the distribution of a given reconstructed variable.} For each uncertainty, a covariance matrix \textcolor{blue}{correlating the variation in the measured number of events between two bins is calculated \st{of its effect on a given distribution is obtained}}. Two approaches are followed to obtain the covariance matrix, depending on the type of uncertainty: unisim or multisim.
 
 Unisim means that a single variation of a given analysis input parameter is performed according to its uncertainty. The difference in the number of selected events between this variation and the central value is taken as the uncertainty in that number of events.
 
@@ -712,7 +710,7 @@ Details on MicroBooNE's approach to handling detector systematics can be found i
 \end{figure}
 
 \subsection{Flux Uncertainties \textcolor{green}{Maya}}
-The flux model and its uncertainties for MCC9~\cite{bib:fluxmcc9,bib:fluxtechnote} are largely the same as MCC8~\cite{bib:fluxtechnote}. We use the multisim technique to estimate the flux uncertainties. The various sources of uncertainties are taken as independent and are varied individually around the central value. They are listed in Table~\ref{tab:fluxsyst} along the number of universes considered for each. The fractional covariance matrix and correlation matrix for the 1eNp selection are presented in Figure~\ref{fig:fluxmatrices} \textcolor{blue}{which amount to 2\% in flux uncertainties}. Meanwhile, Figure~\ref{fig:fluxsystvars} displays the effects of reweighting central value in each universe of an individual parameter of flux.
+The flux \textcolor{blue}{model} and \textcolor{blue}{its} uncertainties for MCC9~\cite{bib:fluxmcc9,bib:fluxtechnote} are largely the same as MCC8~\cite{bib:fluxtechnote}. We use the multisim technique to estimate the flux uncertainties. The various sources of uncertainties are taken as independent and are varied individually around the central value. They are listed in Table~\ref{tab:fluxsyst} along the number of universes considered for each. The fractional covariance matrix and correlation matrix for the 1eNp selection are presented in Figure~\ref{fig:fluxmatrices} which amount to 2\% in flux uncertainties. Meanwhile, Figure~\ref{fig:fluxsystvars} displays the effects of reweighting central value in each universe of an individual parameter of flux.
 
 \begin{table}[H]
 \centering
@@ -779,7 +777,7 @@ piplus\_PrimaryHadronSWCentralSplineVariation     &  Primary Hadron Sanford Wang
 \end{figure}
 
 \subsection{Neutrino Interaction Modeling Uncertainties \textcolor{green}{Maya/Sebastien}}
-We use the \texttt{GENIE} event reweighting framework with the standard reweighting parameters, also known as "knobs", to model the neutrino cross section and final stats uncertainties. Document~\cite{bib:geniesupportnote} describes the GENIE cross-section model, recommended central-value tune, and the recommended uncertainties for MCC9 analyses. 
+We use genie event reweighting framework with the standard reweighting parameters, also known as "knobs", to model the neutrino cross section and final states uncertainties. Document~\cite{bib:geniesupportnote} describes the GENIE cross-section model, recommended central-value tune, and the recommended uncertainties for MCC9 analyses. 
 
 The updated Genie central value tune is guided on fits to the T2K data which increase the MA CCQE and scale up the MEC normalization.
 
@@ -1284,7 +1282,6 @@ The distribution of the test statistic for the null and alternative hypothesis d
 
 
 \newpage
-
 \section{Outlook and Future Work}
 %\subsection{Remaining Steps in the Analysis}
 \par There are several known remaining steps to be completed by the analysis. We list them below, trying to give a timeline for each. 
@@ -1493,9 +1490,6 @@ This section includes the data-MC comparisons plot for the $\nu_e$ CC inclusive 
     \caption{Vertex position of events passing the pre-selection cuts.}
     \label{fig:pre_vtx}
 \end{figure}
-\clearpage
-\newpage
-
 
 \begin{figure}
     \centering
@@ -1503,6 +1497,9 @@ This section includes the data-MC comparisons plot for the $\nu_e$ CC inclusive 
     \caption{d$E$/d$x$ of the electron candidate shower after the pre-selection. The collection plane shows the cleanest e/$\gamma$ separation. The middle panel combines all three planes, leading to a smaller peak at 0 in cases where there are few hits on the collection plane\textcolor{blue}{I don't see the peak at zero}. The plane on the right uses the collection plane but leaves a \SI{1}{\cm} gap, which is beneficial when vertex activity is merged into the electron shower.}
     \label{fig:e_cand_dedx}
 \end{figure}
+
+\clearpage
+\newpage
 
 \subsection{$\pi^0$ filter}
 \par Figures~\ref{fig:pi0:inputs:shrscore1:RUN1}-\ref{fig:pi0:inputs:dot2:RUN3} show the distribution of reconstructed quantities for inputs to the $\pi^0$ selection. Figures~\ref{fig:pi0:inputs:shrscore1:RUN1}-\ref{fig:pi0:inputs:dot2:RUN1} refer to Run1. Figures~\ref{fig:pi0:inputs:shrscore1:RUN3}-\ref{fig:pi0:inputs:dot2:RUN3} refer to Run3. As a reminder, these comparisons are performed after a 0.7 scaling is applied to CC and NC $\pi^0$ events based on the normalization differences found in the $\pi^0$ mass distributions shown in section~\ref{sec:controls:pi0}.
@@ -1644,6 +1641,94 @@ This section includes the data-MC comparisons plot for the $\nu_e$ CC inclusive 
 \end{center}
 \end{figure}
 
+
+\subsection{NuMu CC Inclusive (Constraint Selection) }
+\label{sec:numu:constr}
+This section contains all the MC-Data comparison plots for Section \ref{ssec:NuMUCCsel:constr}).
+
+\begin{figure}[H] 
+\begin{center}
+    \begin{subfigure}[b]{0.3\textwidth}
+    \centering
+    \includegraphics[width=1.00\textwidth]{NuMuCCsel/Images/Ryan/Run1_trklen_SliceID.jpg}
+    \caption{\label{fig:NuMUCCsel:ryan:trklenSliceID} after SliceID}
+    \end{subfigure}
+    \begin{subfigure}[b]{0.3\textwidth}
+    \centering
+    \includegraphics[width=1.00\textwidth]{NuMuCCsel/Images/Ryan/Run1_trklen_EvtSel.jpg}
+    \caption{\label{fig:NuMUCCsel:ryan:trklenEvt} after event-level preselection}
+    \end{subfigure} %\newline
+    \begin{subfigure}[b]{0.3\textwidth}
+    \centering
+    \includegraphics[width=1.00\textwidth]{NuMuCCsel/Images/Ryan/Run1_trklen_fullSel.jpg}
+    \caption{\label{fig:NuMUCCsel:ryan:trklenFull}  With muon-tagging}
+    \end{subfigure}
+\caption{Track length of muon candidates. Just statistical uncertainties shown.}
+\end{center}
+\end{figure}
+
+\begin{figure}[H] 
+\begin{center}
+    \begin{subfigure}[b]{0.3\textwidth}
+    \centering
+    \includegraphics[width=1.00\textwidth]{NuMuCCsel/Images/Ryan/Run1_costheta_SliceID.jpg}
+    \caption{\label{fig:NuMUCCsel:ryan:trklenSliceID} after SliceID}
+    \end{subfigure}
+    \begin{subfigure}[b]{0.3\textwidth}
+    \centering
+    \includegraphics[width=1.00\textwidth]{NuMuCCsel/Images/Ryan/Run1_costheta_EvtSel.jpg}
+    \caption{\label{fig:NuMUCCsel:ryan:trklenEvt} after event-level preselection}
+    \end{subfigure} %\newline
+    \begin{subfigure}[b]{0.3\textwidth}
+    \centering
+    \includegraphics[width=1.00\textwidth]{NuMuCCsel/Images/Ryan/Run1_costheta_fullSel.jpg}
+    \caption{\label{fig:NuMUCCsel:ryan:trklenFull} With muon-tagging}
+    \end{subfigure}
+\caption{Cosine of the track angle of muon candidates with respect to the beam-direction. Just statistical uncertainties shown.}
+\end{center}
+\end{figure}
+
+
+
+\begin{figure}[ht] 
+\begin{center}
+    \begin{subfigure}[b]{0.45\textwidth}
+    \centering
+    \includegraphics[width=1.00\textwidth]{NuMuCCsel/Images/Ryan/Run3_costheta_noCRT.jpg}
+    \caption{\label{fig:NuMUCCsel:ryan:coswithCRT} without CRT}
+    \end{subfigure}
+    \begin{subfigure}[b]{0.45\textwidth}
+    \centering
+    \includegraphics[width=1.00\textwidth]{NuMuCCsel/Images/Ryan/Run3_costheta_withCRT.jpg}
+    \caption{\label{fig:NuMUCCsel:ryan:cosnoCRT} with CRT veto}
+    \end{subfigure}
+\caption{Angle with respect to the beam-direction of muon candidates for $\nu_{\mu}$ constraint. Just statistical uncertainties shown.}
+\label{fig:NuMUCCsel:ryan:Run3CRTcomp}
+\end{center}
+\end{figure}
+
+
+\subsection{NuMu CC Inclusive (Inclusive Selection) }
+\label{sec:numuinclusive2}. This section shows the Data-MC comparisons for the NuMU CC Inclusive selection.
+Comparisons for the selection including un-contained muons:
+\begin{figure}[H]
+    \centering
+    \includegraphics[height=4.25cm]{NuMuCCsel/Images/run1/numu_theta_run1.pdf}
+    \includegraphics[height=4.25cm]{NuMuCCsel/Images/run1/numu_mcsmom_run1.pdf} \hspace{1mm}
+    \includegraphics[height=4.25cm]{NuMuCCsel/Images/run1/numu_vtxntrack_cat_run1.pdf}
+    \caption{(left) Kinematics of the muon tagged track. Because the selection is not contained, multiple coulomb scattering is used to determine the momentum. (right) Track multiplicity at vertex. An object is considered to be a track at vertex if the \textit{track\_score} $>$ 0.3 and \textit{trk\_distance} $<$ \SI{3}{\cm}.}
+    \label{fig:numu:mcs}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[height=5.35cm]{NuMuCCsel/Images/run1/numu_recovtx_run1.pdf}
+    \caption{Position of the reconstructed vertex after the selection. Notice the high purity event at the edges of the detector. The reduced efficiency due to the dead wire region is clearly visible.. Because the purity is reasonable, it was chosen to be as inclusive as possible and not remove the region.}
+    \label{fig:numu:vtx}
+\end{figure}
+
+Comparisons for the high purity selection:
+
 \section{Code Repositories}
 
 \begin{thebibliography}{}
@@ -1720,10 +1805,6 @@ MicroBooNE Collaboration, \emph{First Measurement of Inclusive Muon Neutrino Cha
 
 \bibitem{bib:cholesky}
 Press W H, Teukolsky S A, Vetterling W T and Flannery B P, \emph{Numerical Recipes in C++ 2nd edn}, Cambridge: Cambridge University Press (2002) pp 99–101.
-
-\bibitem{bib:tpccalibrationnote}
-MicroBooNE Detector and Calibration groups, \emph{Calorimetry reconstruction and calibration in MCC9}
-\href{https://microboone-docdb.fnal.gov/cgi-bin/private/ShowDocument?docid=27042}{DocDB 27042}
 
 \end{thebibliography}
 
